--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
-
-.container {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;900&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 100%;
+}
+body{
+  background-color: #DBE2E9;
+}
+ img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} 
+section{
+  min-height:100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 100px 0;
+}
+.container{
   background-color: white;
   width: 90%;
   max-width: 900px;
@@ -9,105 +34,113 @@
   border-radius: 20px;
   text-align: center;
 }
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.item {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-  border-radius: 8px;
-  transition: .3s ease box-shadow;
-}
-
-.header {
+.header{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-.header h1 {
+.header h1{
   cursor: pointer;
-  font-size: 30px;
-  font-weight: 600;
-  font-family: "Trebuchet MS", sans-serif;
-  letter-spacing: 1px;
+  font-size: 40px;
+  font-weight: 900;
+  letter-spacing: -2px;
 }
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -10px;
-} 
-
-.gallery {
+form{
+  margin-top: 30px;
+  width: 80%;
+  max-width: 300px;
+  position: relative;
+}
+input{
+  border: none;
+  border-bottom: 2px solid rgba(128, 128, 128, 0.479);
+  font-size: 20px;
+  width: 100%;
+  outline: none;
+  color: gray;
+  background-color: transparent;
+}
+input::placeholder{
+  opacity: .5;
+  color: gray;
+  font-family: 'Montserrat';
+}
+form ion-icon{
+  position: absolute;
+  right: 0;
+  font-size: 20px;
+  opacity: .5;
+  color: gray;
+}
+.gallery{
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) ;
   margin-top: 50px;
   grid-gap: 20px;
 }
-
-.catgrid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-} 
-
-.col {
-  padding: 10px;
-  width: 20%;
-}
-
-.col-lg {
-    height: 200px;
-    overflow: hidden;
-    margin: 10px 0;
-    position: relative;
-    flex-basis: 30%;
-}
-.col img {
+.item{
   width: 100%;
-  height: auto;
-  display: block;
+  height: 300px;
+  position: relative;
+  overflow: hidden;
+  border-radius:8px;
+  transition: .3s ease box-shadow;
 }
 
-@media (max-width: 991px) {
-  .col {
-    width: 33.33%;
-  }
+.item:hover{
+  box-shadow: 0px 0px 20px 3px #00000042;
 }
-
-@media (max-width: 767px) {
-  .container {
-    padding: 10px;
-  }
-
-  .catgrid {
-    margin: -2px;
-  }
-
-  .col {
-    width: 50%;
-    padding: 2px;
-  }
+.item:nth-last-child(1){
+  margin-bottom: 0;
 }
-
-.pagination-container {
-  font-size: 26px;
-  font-weight: 600;
-  font-family: 'Montserrat', sans-serif;
-  letter-spacing: 3px;
-
-}
-
-.section {
-  min-height: 100vh;
+.item h3{
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 100px 0;
+  padding: 20px;
+  position: absolute;
+  background-color: #00000040;
+  color: aliceblue;
+  bottom: -70px;
+  font-weight: 300;
+  transition: .5s ease-in-out bottom;
+}
+.item:hover h3{
+  bottom: 0;
+}
+.load-more{
+  display: inline-block;
+  margin-top:30px;
+  padding: 20px 50px;
+  background-color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: azure;
+  font-weight: 500;
+  cursor: pointer;
+}
+@media only screen and (min-width: 900px){
+ .container{
+   max-width: 1160px;
+   padding: 100px;
+ }
+ .header{
+   flex-direction: row;
+   justify-content: space-between;
+ }
+ .header h1{
+   font-size: 50px;
+ }
+ .header input{
+   font-size: 24px;
+ }
+ .header ion-icon{
+   font-size: 24px;
+ }
+ .gallery{
+   grid-gap: 30px;
+ }
+
+
+ .container {
+  column-count: 3;
 }
