--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;900&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -9,7 +8,7 @@ html{
   font-size: 100%;
 }
 body{
-  background-color: #DBE2E9;
+  background-color: cadetblue;
 }
  img{
   width: 100%;
@@ -45,33 +44,7 @@ section{
   font-weight: 900;
   letter-spacing: -2px;
 }
-form{
-  margin-top: 30px;
-  width: 80%;
-  max-width: 300px;
-  position: relative;
-}
-input{
-  border: none;
-  border-bottom: 2px solid rgba(128, 128, 128, 0.479);
-  font-size: 20px;
-  width: 100%;
-  outline: none;
-  color: gray;
-  background-color: transparent;
-}
-input::placeholder{
-  opacity: .5;
-  color: gray;
-  font-family: 'Montserrat';
-}
-form ion-icon{
-  position: absolute;
-  right: 0;
-  font-size: 20px;
-  opacity: .5;
-  color: gray;
-}
+
 .gallery{
   width: 100%;
   display: grid;
@@ -107,17 +80,7 @@ form ion-icon{
 .item:hover h3{
   bottom: 0;
 }
-.load-more{
-  display: inline-block;
-  margin-top:30px;
-  padding: 20px 50px;
-  background-color: black;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: azure;
-  font-weight: 500;
-  cursor: pointer;
-}
+
 @media only screen and (min-width: 900px){
  .container{
    max-width: 1160px;
@@ -130,16 +93,10 @@ form ion-icon{
  .header h1{
    font-size: 50px;
  }
- .header input{
-   font-size: 24px;
- }
- .header ion-icon{
-   font-size: 24px;
- }
+
  .gallery{
    grid-gap: 30px;
  }
-
 
  .container {
   column-count: 3;
